--- a/index.html
+++ b/index.html
@@ -25,9 +25,28 @@
       </div>
     </div>
   </header>
+
   <main class="container">
-    <div data-view="entry-form"></div>
+
+    <div data-view="entry-form">
+
+      <form action="">
+        <img src="" alt="place holder for image">
+
+        <label for="title">Title</label>
+        <input type="text" name="entry-title" id="title">
+
+        <label for="photo">Photo URL</label>
+        <input type="text" name="photo-url" id="photo">
+
+        <label for="notes">Notes</label>
+        <textarea name="entry-text" id="notes" cols="30" rows="10"></textarea>
+      </form>
+
+    </div>
+
     <div data-view="entries" class="hidden"></div>
+
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
