--- a/index.html
+++ b/index.html
@@ -29,18 +29,24 @@
   <main class="container">
 
     <div data-view="entry-form">
+      <h2>New Entry</h2>
+      <form action="" class="row">
+        <div class="column-full column-half journal-photo"><img src="images/placeholder-image-square.jpg" alt="place holder for image"></div>
 
-      <form action="">
-        <img src="" alt="place holder for image">
+        <div class="column-full column-half">
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title">
+          <label for="photo">Photo URL</label>
+          <input type="text" name="photo" id="photo">
+        </div>
 
-        <label for="title">Title</label>
-        <input type="text" name="entry-title" id="title">
+        <div class="column-full">
+          <label for="notes">Notes</label>
+          <textarea name="notes" id="notes" cols="30" rows="10"></textarea>
+        </div>
 
-        <label for="photo">Photo URL</label>
-        <input type="text" name="photo-url" id="photo">
+        <div class="column-full"><button type="submit">Save</button></div>
 
-        <label for="notes">Notes</label>
-        <textarea name="entry-text" id="notes" cols="30" rows="10"></textarea>
       </form>
 
     </div>
