--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
         <div class="column-full column-half">
           <label for="title">Title</label>
-          <input type="text" name="title" id="title">
+          <input type="text" name="title" id="title" required>
           <label for="photo">Photo URL</label>
-          <input type="text" name="photo" id="photo">
+          <input type="text" name="photo" id="photo" required>
         </div>
 
         <div class="column-full">
           <label for="notes">Notes</label>
-          <textarea name="notes" id="notes" rows="10"></textarea>
+          <textarea name="notes" id="notes" rows="10" required></textarea>
         </div>
 
         <div class="column-full flex-end"><button type="submit" id="save">SAVE</button></div>
