--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div data-view="entry-form">
       <h2>New Entry</h2>
       <form action="" class="row">
-        <div class="column-full column-half journal-photo"><img src="images/placeholder-image-square.jpg" alt="place holder for image"></div>
+        <div class="column-half journal-photo"><img src="images/placeholder-image-square.jpg" alt="place holder for image"></div>
 
-        <div class="column-full column-half">
+        <div class="column-half">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" required>
           <label for="photo">Photo URL</label>
