Created function to build dom tree for a single entry.

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
             multimedia franchise. Master Chief is a playable character in the series of military science fiction first-person
             shooter video games Halo: Combat Evolved, Halo 2, Halo 3, Halo 4, Halo 5: Guardians and Halo Infinite. The character
             also appears in Halo books and graphic novels  including Halo: The Fall of Reach, Halo: The Flood, Halo: First Strike,
-            and Halo: Uprising  and has minor appearances or cameos in other Halo media.</p>
-            <p>The Master Chief is a towering supersoldier known as a Spartan, raised and trained from childhood for combat. He is
+            and Halo: Uprising  and has minor appearances or cameos in other Halo media.
+
+            The Master Chief is a towering supersoldier known as a Spartan, raised and trained from childhood for combat. He is
             almost faceless as he is rarely seen without his green-colored armor and helmet. He is commonly referred to by his naval
             rank rather than his given birth name. The character is voiced by Steve Downes, a former Chicago disc jockey, in the
             video games in which he appears, while in alternate media outside the Halo games, he is portrayed by other actors, most
