Completed new entry form anchor to swap view to form.

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 
     </div>
 
-    <div data-view="entries" class="hidden">
+    <div data-view="entries">
       <div class="row">
         <div class="column-full space-between">
           <h2>Entries</h2>
-          <button id="new-entry">NEW</button>
+          <a id="new-entry" data-view="entry-form">NEW</a>
         </div>
         <div class="column-full text-cen">
           <p>No Entries have been recorded.</p>
