Fixed viewswap and event listeners for anchor buttons, and updated save function for the submit event listener.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     </div>
 
-    <div data-view="entries">
+    <div data-view="entries" class="hidden">
       <div class="row">
         <div class="column-full space-between">
           <h2>Entries</h2>
