--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <header>
     <div class="container">
       <div class="row">
-
-        <h1 class="white-text">Code Journal</h1>
-        <a class="header-link" data-view="entries">Entries</a>
-
+        <div class="column-full flex">
+          <h1 class="white-text">Code Journal</h1>
+          <a class="header-link" data-view="entries">Entries</a>
+        </div>
       </div>
     </div>
   </header>
@@ -57,11 +57,11 @@
     </div>
 
     <div data-view="entries" class="hidden">
+      <div class="space-between">
+        <h2>Entries</h2>
+        <a id="new-entry" data-view="entry-form">NEW</a>
+      </div>
       <div class="row">
-        <div class="column-full space-between">
-          <h2>Entries</h2>
-          <a id="new-entry" data-view="entry-form">NEW</a>
-        </div>
         <div class="column-full text-cen">
           <p>No Entries have been recorded.</p>
         </div>
