Debugged no entries toggle function when used with all other functions and multiple entries.

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 
     </div>
 
-    <div data-view="entries" class="hidden">
+    <div data-view="entries">
       <div class="space-between">
         <h2>Entries</h2>
         <a id="new-entry" data-view="entry-form">NEW</a>
       </div>
       <div class="row">
         <div class="column-full text-cen">
-          <p>No Entries have been recorded.</p>
+          <p class="hidden">No Entries have been recorded.</p>
         </div>
       </div>
       <ul>
