--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
+  <link
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Source+Sans+Pro:wght@200;300;400;600&display=swap"
     rel="stylesheet">
 </head>
 <body>
