Added delete button, to show when editing start and disapear on edit save.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
           <textarea name="notes" id="notes" rows="10" required></textarea>
         </div>
 
-        <div class="column-full flex-end"><button type="submit" id="save">SAVE</button></div>
+        <div class="column-full space-between">
+          <div><button class="hidden" id="delete">Delete Entry</button></div>
+          <button type="submit" id="save">SAVE</button>
+        </div>
 
       </form>
 
