--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
 
   <main class="container">
 
+    <div class="hidden" id="popup">
+      <div class="modal">
+        <p>Are you sure you want to delete this entry?</p>
+        <div class="space-between">
+          <button id="cancel">CANCEL</button>
+          <button id="confirm">CONFIRM</button>
+        </div>
+      </div>
+    </div>
+
     <div data-view="entry-form">
       <h2>New Entry</h2>
       <form action="" class="row">
