Popup closes when delete button is pushed. Changed delete button type to button to not trigger submit event.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="column-full space-between">
-          <div><button class="hidden" id="delete">Delete Entry</button></div>
+          <div><button type="button" class="hidden" id="delete">Delete Entry</button></div>
           <button type="submit" id="save">SAVE</button>
         </div>
 
