--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <h2>Entries</h2>
         <a id="new-entry" data-view="entry-form">NEW</a>
       </div>
+      <div>
+        <input type="text" placeholder="Search For Entries" id="search">
+      </div>
       <div class="row">
         <div class="column-full text-cen">
           <p class="hidden">No Entries have been recorded.</p>
