Added clickable icon to reverse the order of entries.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
         <h2>Entries</h2>
         <a id="new-entry" data-view="entry-form">NEW</a>
       </div>
-      <div>
+      <div class="space-between">
         <input type="text" placeholder="Search For Entries" id="search">
+        <i class="fa-sharp fa-solid fa-arrows-up-down"></i>
       </div>
       <div class="row">
         <div class="column-full text-cen">
